[package]
name = "simulation"
version = "0.1.0"
edition = "2018"

#[lib]
#crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_distr = "0.4.2"
pyo3 = { version = "0.14.5", features = ["extension-module"] }
rayon = "1.5.1"
nalgebra = "0.25.0"
ordered-float = "2.8.0"
